# backend/swagger_server/controllers/client_controller.py
@@ -1,8 +1,7 @@
-import json
-
 import connexion
 import six
 
+from swagger_server.models.game import Game  # noqa: E501
 from swagger_server.models.team import Team  # noqa: E501
 from swagger_server import util
 
@@ -15,9 +14,19 @@ def get_teams():  # noqa: E501
 
     :rtype: List[Team]
     """
-    f = open('C:/Users/Mark/Documents/website/backend/teams.json', encoding='utf-8')
-    data = json.load(f)
-    teams = []
-    for team in data:
-        teams.append(Team.from_dict(team))
-    return teams
+    return 'do some magic!'
+
+
+def predict_game(home_id=None, away_id=None):  # noqa: E501
+    """Predict the outcome of two teams playing
+
+     # noqa: E501
+
+    :param home_id: 
+    :type home_id: int
+    :param away_id: 
+    :type away_id: int
+
+    :rtype: Game
+    """
+    return 'do some magic!'
